# snpe_impl

./: README.md  pyproject.toml
examples/: example_usage.py
snpe_impl/: __init__.py  elasticity.py  estimator.py  utils.py  visuals.py
tests/: test_estimator.py
