[project]
name = "snpe_impl"
version = "0.2.0"
description = "Scalable Nonparametric Price Elasticity Estimation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "pandas>=1.1.0",
    "matplotlib>=3.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"